# puan-python

./: .readthedocs.yml  README.md  complexity_test.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.ipynb  test.py  tm.py
.github/workflows/: publish.yml  test.yaml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  puan.logic.cic.rst  puan.logic.rst  puan.logic.sta.rst  puan.misc.rst  puan.rst  puan.vmap.rst
docs/source/_static/: puan.css
docs/source/dev/: index.rst
docs/source/guide/: index.rst  install.rst  puan.rst  quickstart.rst  tutorial.rst
docs/source/guide/tutorials/: cic-model.rst  configurator.rst  index.rst  plog-model.rst  sta-model.rst
docs/source/reference/: index.rst  puan.logic.cic.rst  puan.logic.plog.rst  puan.logic.rst  puan.logic.sta.rst  puan.misc.rst  puan.modules.configurator.rst  puan.modules.rst  puan.ndarray.rst  puan.rst
puan/: __init__.py
puan/logic/: __init__.py
puan/logic/cic/: __init__.py
puan/logic/plog/: __init__.py  logicfunc.c
puan/logic/sta/: __init__.py
puan/misc/: __init__.py
puan/modules/: __init__.py
puan/modules/configurator/: __init__.py
puan/ndarray/: __init__.py  npufunc.c
puan/solver/: __init__.py
puan/vmap/: __init__.py
tests/: __init__.py  test_puan.py
